Add route to get locations by proximity
